fixed navigation menu issue on mobile device

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,9 +1,10 @@
 header {
   position: sticky;
-  top: 0;
+  top: -3px;
   width: 100%;
   z-index: 1;
   nav {
+    box-shadow: 0.5px 0.5px 0.5px 0.3px rgba(0, 0, 0, 0.2);
     color: black;
     top: 0;
     ul {
@@ -79,6 +80,47 @@ header {
           span {
             color: rgba(0, 0, 0, 0.7);
           }
+        }
+      }
+    }
+
+    .mob-header {
+      .mob-logo {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px 20px;
+
+        button {
+          position: relative;
+          border: none;
+          background-color: transparent;
+          font-size: 20px;
+          span {
+            position: absolute;
+            top: 0;
+            transform: translateY(-30%);
+          }
+        }
+      }
+
+      .mob-menu-links {
+        display: flex;
+        justify-content: space-between;
+        background-color: transparent;
+        padding: 10px 20px;
+        box-shadow: 0.5px 0.5px 0.5px 0.3px rgba(0, 0, 0, 0.2);
+
+        a {
+          color: rgba(0, 0, 0, 1);
+          font-size: 18px;
+          padding: 3px 10px;
+          border-radius: 5px;
+          font-weight: 600;
+        }
+        & .active {
+          background-color: rgba(0, 0, 0, 1);
+          color: rgba(255, 255, 255, 1);
         }
       }
     }
